--- a/app_server/views/signup.ejs
+++ b/app_server/views/signup.ejs
@@ -15,7 +15,7 @@
 
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input id="username" type="text" class="form-control" name="userName" placeholder="Kullanıcı Mail" required>
+                            <input id="username" type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı" required>
                         </div>
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -23,7 +23,7 @@
                         </div>
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                            <input id="password" type="text" class="form-control" name="password" placeholder="parola" required> 
+                            <input id="password" type="text" class="form-control" name="password" placeholder="Parola" required> 
                         </div>
                         <div class="pull-right">
                             <button type="submit" class="btn btn-primary">Kayıt Ol</button>
